kubernetes/ingress-do.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: decentered-ingress
  annotations:
      cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - events.noamsml.com
    - events.decentered.org
    secretName: noamsml-kubernetes-tls
  ingressClassName: nginx
  rules:
    - host: "events.noamsml.com"
      http:
        paths:
          - path: /v1
            pathType: Prefix
            backend:
              service:
                name: decentered-backend
                port:
                  number: 80
    - host: "events.noamsml.com"
      http:
        paths:
          - path: /feed
            pathType: Prefix
            backend:
              service:
                name: decentered-backend
                port:
                  number: 80
    - host: "events.noamsml.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: decentered-frontend
                port:
                  number: 80
    - host: "events.decentered.org"
      http:
        paths:
          - path: /v1
            pathType: Prefix
            backend:
              service:
                name: decentered-backend
                port:
                  number: 80
    - host: "events.decentered.org"
      http:
        paths:
          - path: /feed
            pathType: Prefix
            backend:
              service:
                name: decentered-backend
                port:
                  number: 80
    - host: "events.decentered.org"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: decentered-frontend
                port:
                  number: 80
